# KungFu-Chess

./: .clangd  .gitignore  .gitmodules  Board.hpp  CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.hpp  GameState.hpp  Makefile  build.bat  gui_main.cpp  main.cpp  server_main.cpp
core/: EventBus.hpp  GameEvents.hpp
engine/: GameEngine.cpp  GameEngine.hpp
include/model/: Piece.hpp  Position.hpp
input/: BoardMapper.cpp  BoardMapper.hpp  Controller.cpp  Controller.hpp  RemoteController.hpp
io/: BoardParser.cpp  BoardParser.hpp  BoardPrinter.cpp  BoardPrinter.hpp
model/: ActiveMotionInfo.hpp  Board.cpp  Board.hpp  GameConstants.hpp  GameSnapshot.cpp  GameSnapshot.hpp  GameState.cpp  GameState.hpp  GameStats.cpp  GameStats.hpp  Piece.cpp  Piece.hpp  Position.cpp  Position.hpp
network/: JsonCodec.cpp  JsonCodec.hpp  Lobby.cpp  Lobby.hpp  NetworkBridge.cpp  NetworkBridge.hpp  Protocol.hpp  RemoteGameSession.cpp  RemoteGameSession.hpp  WebSocketClient.hpp  WebSocketServer.cpp  WebSocketServer.hpp
realtime/: Motion.cpp  Motion.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp
rules/: PieceRules.cpp  PieceRules.hpp  RuleEngine.cpp  RuleEngine.hpp
scripts/: gen_compile_db.py
shell/: HomeScreen.cpp  HomeScreen.hpp
src/logic/engine/: GameEngine.cpp  GameEngine.hpp
src/logic/input/: BoardMapper.cpp  BoardMapper.hpp
src/logic/io/: BoardParser.cpp  BoardPrinter.cpp  BoardPrinter.hpp
src/logic/model/: ActiveMotionInfo.hpp  GameConstants.hpp  Position.cpp  Position.hpp
src/logic/network/: JsonCodec.cpp  JsonCodec.hpp  MatchmakingQueue.cpp  MatchmakingQueue.hpp  Protocol.hpp
src/logic/realtime/: RealTimeArbiter.cpp  RealTimeArbiter.hpp
src/logic/rules/: RuleEngine.cpp
src/logic/texttests/: ScriptParser.cpp  ScriptRunner.hpp
src/model/: Board.cpp  GameState.cpp  Piece.cpp  Position.cpp
src/server/: server_main.cpp
src/server/network/: Lobby.cpp  Lobby.hpp  NetworkBridge.cpp  NetworkBridge.hpp  WebSocketServer.cpp  WebSocketServer.hpp
src/server/storage/: EloRating.cpp
src/tests/: test_board.cpp  test_board_mapper.cpp  test_board_parser.cpp  test_elo_rating.cpp  test_event_bus.cpp  test_game_engine.cpp  test_home_screen.cpp  test_json_codec.cpp  test_lobby.cpp  test_matchmaking.cpp  test_piece_animator.cpp  test_piece_rules.cpp  test_rule_engine.cpp  test_script_runner.cpp  test_user_database.cpp
src/tests/integration/scripts/: 02_click_to_move.kfc
src/ui/: gui_main.cpp
src/ui/input/: RemoteController.cpp  RemoteController.hpp
src/ui/network/: RemoteGameSession.cpp  RemoteGameSession.hpp  WebSocketClient.cpp
src/ui/shell/: HomeScreen.cpp  HomeScreen.hpp
src/ui/view/: ImageVIew.cpp  ImageView.hpp  Renderer.cpp
src/ui/view/animation/: AnimationConfig.hpp  AnimatorRegistry.cpp  AnimatorRegistry.hpp  PieceAnimator.hpp
storage/: EloRating.hpp  PasswordHasher.cpp  PasswordHasher.hpp  UserDatabase.cpp  UserDatabase.hpp
tests/: test_board.cpp  test_board_mapper.cpp  test_board_parser.cpp  test_elo_rating.cpp  test_event_bus.cpp  test_framework.hpp  test_game_engine.cpp  test_home_screen.cpp  test_json_codec.cpp  test_lobby.cpp  test_piece_animator.cpp  test_piece_rules.cpp  test_rule_engine.cpp  test_script_runner.cpp  test_user_database.cpp
texttests/: ScriptParser.hpp  ScriptRunner.cpp
view/: ImageVIew.cpp  ImageView.hpp  Renderer.cpp  Renderer.hpp
view/animation/: AnimationConfig.cpp  AnimationConfig.hpp  AnimatorRegistry.hpp  PieceAnimator.cpp  PieceAnimator.hpp
